--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular": "^1.5.8",
     "angular-route": "^1.5.8",
     "browserify": "^11.0.1",
+    "gsap": "^1.19.0",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
     "gulp-open": "^1.0.0",
